Refactor configuración de proyecto: actualizar puerto de vista previa y ajustar importaciones de estilos

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,12 @@
 @layer tailwind-base, primereact, tailwind-utilities;
 
+/* @import 'primereact/resources/themes/lara-light-cyan/theme.css'; */
+
+/* :root {
+  --primary-color: red;
+  --button-bg-color: #2980b9;
+  --button-text-color: white;
+} */
 
 @layer tailwind-base {
   @tailwind base;
