Estilos agregados en los formularios

--- a/src/presentation/pages/private/newQuote/modules/CustomerData/components/Style.module.css
+++ b/src/presentation/pages/private/newQuote/modules/CustomerData/components/Style.module.css
@@ -1,7 +1,7 @@
 .form {
-  @apply md:px-7 md:py-7 px-5 py-5
-      flex-1 
+  @apply px-3 py-3
       bg-white rounded-lg
+      shadow-xl
       border-2 border-secondary
       flex flex-col;
 }
@@ -11,15 +11,13 @@
 }
 
 .form .container label {
-  @apply text-tertiary text-[15px] font-bold
-      mb-2;
+  @apply text-tertiary text-[15px] font-bold mb-2;
 }
 
 .form .container small {
   @apply text-red-500;
 }
 
-.form button {
-  @apply rounded-md
-      mt-auto;
-}
+/* .form > button:last-child {
+  @apply rounded-md mt-auto;
+} */
